# SoftRender

./: CMakeLists.txt  README.md  RenderLoop.cpp  RenderLoop.h  RenderThread.cpp  RenderThread.h  Window.cpp  Window.h  main.cpp  ui_Window.h
SoftRenderer/: BaseShader.cpp  BaseShader.h  FrameBuffer.cpp  FrameBuffer.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  ObjModel.cpp  ObjModel.h  Pipeline.cpp  Pipeline.h  SimpleShader.cpp  SimpleShader.h  Texture2D.cpp  Texture2D.h
SoftRenderer/Math/: MathUtils.h  Matrix4x4.cpp  Matrix4x4.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp  Vector4D.h
